# Colligo

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  DEV_README.md  LICENSE  README.md  build.rs
.cargo/: config
.github/workflows/: release.yml  sanity_check.yml
script/: assert_version
src/: application.rs  default_manifest.rs  git_version_control.rs  lib.rs  main.rs  project.rs  version.rs  version_control.rs  xml_parser.rs
tests/: manifest.xml  manifest_copydir.xml  manifest_del_repo.xml  manifest_example.xml  manifest_symlink_dir.xml  pinned_manifest_example.xml  test_application.rs  test_git_version_control.rs  test_manifest.rs  test_xml_parser.rs
