[package]
name = "colligo"
version = "0.4.0"
edition = "2021"

[dependencies]
roxmltree = "0.19.0"
clap = "4.3.11"
log = "0.4"
pathdiff = "0.2.1"
indicatif = "0.17.7"
regex = "1.10.3"

[dependencies.simple_logger]
version = "4.2.0"
default-features = false
features = ["stderr"]

[dev-dependencies]
git2 = "0.18.1"
