[package]
name = "colligo"
version = "0.4.2"
edition = "2021"

[dependencies]
roxmltree = "0.19.0"
clap = "4.3.11"
log = "0.4"
pathdiff = "0.2.1"
indicatif = "0.17.7"
regex = "1.10.3"
tokio = { version = "1.44", features = ["rt-multi-thread", "sync", "rt", "macros", "time", "process", "io-std", "io-util"] }
async-trait = "0.1"

[dependencies.simple_logger]
version = "4.2.0"
default-features = false
features = ["stderr"]

[dev-dependencies]
git2 = "0.18.1"
tempfile = "3.19"
