[package]
name = "colligo"
version = "0.5.0"
edition = "2021"

[dependencies]
roxmltree = "0.21"
clap = "4.5"
log = "0.4"
pathdiff = "0.2.1"
indicatif = "0.18"
regex = "1.10.3"
tokio = { version = "1.44", features = ["rt-multi-thread", "sync", "rt", "macros", "time", "process", "io-std", "io-util", "fs"] }
async-trait = "0.1"

[dependencies.simple_logger]
version = "5.1"
default-features = false
features = ["stderr"]

[dev-dependencies]
git2 = "0.20"
tempfile = "3.19"
